--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -93,3 +93,11 @@ $context-menu-focus-font-color:               $point-blue;
 // container > contents > button-board, drawing-board
 $document-content-drawing-board-width:  61.56rem; // 985px
 $document-content-drawing-board-top-margin: 6.563rem; // 105px
+
+// color-picker palette
+$color-picker-palette-width:                 100%;
+$color-picker-palette-margin:                0.1875rem;  // 3px
+$color-picker-palette-padding:               0.9375rem 0 0.9375rem 0.9375rem; // 15px 0 15px 15px
+$color-picker-colorchip-size:                1rem; // 16px
+$color-picker-colorchip-margin:              0.1875rem; // 3px
+$color-picker-colorchip-border:              0.125rem solid $white; // 2px
