--- a/src/main/resources/public/src/scss/process/_variables.scss
+++ b/src/main/resources/public/src/scss/process/_variables.scss
@@ -17,9 +17,17 @@ $process-container-min-height: 41.563rem;  // 665px
 
 
 // button
-$button-font-size:              16px;
-$button-font-weight:            500; // medium
-$button-line-height:            24px;
-$button-font-color:             $light-black;
-$button-border:                 0.0625rem solid transparent;
-$button-bg-color:               transparent;
+$button-font-size:                            16px;
+$button-font-weight:                          500; // medium
+$button-line-height:                          24px;
+$button-font-color:                           $light-black;
+$button-border:                               0.0625rem solid transparent;
+$button-bg-color:                             transparent;
+
+// color-picker palette
+$color-picker-palette-width:                  100%;
+$color-picker-palette-margin:                 0.1875rem;  // 3px
+$color-picker-palette-padding:                0.9375rem 0 0.9375rem 0.9375rem; // 15px 0 15px 15px
+$color-picker-colorchip-size:                 1rem; // 16px
+$color-picker-colorchip-margin:               0.1875rem; // 3px
+$color-picker-colorchip-border:               0.125rem solid $white; // 2px
