--- a/src/main/resources/public/src/scss/template/_color-picker.scss
+++ b/src/main/resources/public/src/scss/template/_color-picker.scss
@@ -36,43 +36,20 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     background-color: $white;
-    width: 30rem; // 480px
+    width: $color-picker-palette-width;
     margin-top: $color-picker-margin;
-    padding: 1.25rem 0 0.625rem 1.25rem; // 20px 10px 20px;
+    padding: $color-picker-palette-padding;
     border: 0.0625rem solid $line-gray;
     & div {                          // 컬러 팔레트 내부의 색상표 박스 디자인
         display: inline-block;
-        width: $color-picker-box-size;
-        height: $color-picker-box-size;
-        margin-right: $color-picker-palette-margin; // 10px;
-        margin-bottom: $color-picker-palette-margin; // 10px;
+        width: $color-picker-colorchip-size;
+        height: $color-picker-colorchip-size;
+        margin-right: $color-picker-palette-margin;
+        margin-bottom: $color-picker-palette-margin;
         cursor: pointer;
         &.selected {
-            border: 0.375rem solid $white; // 6px
-            outline: 0.063rem solid $point-blue; // 1px
-        }
-    }
-}
-
-@mixin min-color-palette() {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    background-color: $white;
-    width: 100%;
-    margin-top: 0.188rem;
-    padding: 0.9375rem 0 0.9375rem 0.9375rem; // 15px 0 15px 15px
-    border: 0.0625rem solid $line-gray;
-    & div {
-        display: inline-block;
-        width: 1rem; // 16px
-        height: 1rem; // 16px
-        margin: 0.1875rem; // 3px
-        cursor: pointer;
-        &:last-child { border: 0.0625rem solid $line-gray; }
-        &.selected {
-            border: 0.125rem solid $white; // 2px
-            outline: 0.063rem solid $point-blue; // 1px
+            border: $color-picker-colorchip-border;
+            outline: 0.0625rem solid $point-blue;
         }
     }
 }
@@ -88,11 +65,11 @@
     span {
         display: table-cell;
         vertical-align: middle;
-
+        height: 3rem; // 48px
         input {
             vertical-align: middle;
             width: 1.875rem; // 30px
-            height: 1.25rem; // 20px
+            height: 2rem; // 32px
         }
 
         input[type=range] {
@@ -124,7 +101,7 @@
         }
 
         input.slide-object {
-            width: 7.625rem;
+            width: 9.125rem;   // 146px
             height: 0.0625rem; // 1px
             background: #c8ced8;
             border: initial;
