#9234 [템플릿 SCSS] _color-picker.scss
- MR feedback

--- a/src/main/resources/public/src/scss/template/_color-picker.scss
+++ b/src/main/resources/public/src/scss/template/_color-picker.scss
@@ -15,7 +15,7 @@
       width: $color-picker-color-size;
       height: $color-picker-color-size;
       margin: $color-picker-margin;
-      border: 0.1875rem solid #68717c;
+      border: transparent;
       cursor: pointer;
       &-box {
         width: $color-picker-box-size;
