--- a/src/main/resources/public/template/document/documentEdit.html
+++ b/src/main/resources/public/template/document/documentEdit.html
@@ -227,7 +227,7 @@
             });
             let colorPaletteLayer = document.getElementById('color-palette-layer');
             let option = {
-                colors: colorPalette.getPaletteColors('documentPaletteColors'),
+                colors: colorPalette.getPaletteColors('basicPaletteColors'),
                 data : {
                     isSelected: true,
                     selectedClass: 'selected',
