--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -5825,6 +5825,7 @@ span.vertical-bar {
   width: 1.75rem;
   height: 1.75rem;
   margin: 0.3125rem;
+  border: transparent;
   cursor: pointer;
 }
 
@@ -5832,37 +5833,37 @@ span.vertical-bar {
   width: 2.5rem;
   height: 2.5rem;
   margin-right: 0.3125rem;
-  border: 0.0625rem solid #ebebeb;
+  border: 0.0625rem solid #EBEBEB;
   display: flex;
 }
 
 .color-picker .color-input .selected-color-box:hover {
-  border: 0.0625rem solid #0098ff;
+  border: 0.0625rem solid #0098FF;
 }
 
 .color-picker .color-palette {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
-  background-color: #fff;
+  background-color: #ffffff;
   width: 30rem;
   margin-top: 0.3125rem;
   padding: 1.25rem 0 0.625rem 1.25rem;
-  border: 0.0625rem solid #ebebeb;
+  border: 0.0625rem solid #EBEBEB;
 }
 
 .color-picker .color-palette div {
   display: inline-block;
   width: 2.5rem;
   height: 2.5rem;
-  margin-right: 0.625rem;
-  margin-bottom: 0.625rem;
+  margin-right: 0.3125rem;
+  margin-bottom: 0.3125rem;
   cursor: pointer;
 }
 
 .color-picker .color-palette div.selected {
   border: 0.375rem solid #ffffff;
-  outline: 0.063rem solid #0098ff;
+  outline: 0.0625rem solid #0098FF;
 }
 
 .help-tooltip {
