관련 문서 팝업 개선

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -3744,6 +3744,7 @@ span.vertical-bar {
   display: table;
   width: 100%;
   height: 3.125rem;
+  line-height: 3.125rem;
 }
 
 .popup .related-instance-main .table-set table tbody tr td {
