--- a/src/main/resources/public/src/scss/theme/default/_container.scss
+++ b/src/main/resources/public/src/scss/theme/default/_container.scss
@@ -181,6 +181,7 @@ span.vertical-bar {
               display: table;
               width: 100%;
               height: 3.125rem; // 50px
+              line-height: 3.125rem; // 50px
               td {
                 display: inline-block; // 말줄임 적용을 위해 추가
                 vertical-align: middle;
