--- a/src/main/resources/public/template/token/tokenInstanceList.html
+++ b/src/main/resources/public/template/token/tokenInstanceList.html
@@ -25,13 +25,12 @@
     </thead>
     <tbody id="instanceList" class="list-body">
         <tr th:each="instance, index : ${instanceList}">
-            <td style="width:5%;" >
+            <td style="width:5%;" class="align-center">
                 <label class="checkbox" th:for="${index.index}" tabindex="0">
                     <input type="checkbox" name="chk" th:id="${index.index}"
                            th:value="${instance.instanceId}">
                     <span></span>
                 </label>
-                <!--<input type="checkbox" th:id="${index.index}" th:name="chk" th:value="${instance.instanceId}"></td>-->
             <td style="width:20%;" th:text="${instance.documentNo}"></td>
             <td style="width:20%;" th:text="${instance.documentName}"></td>
             <td style="width:20%;" th:name="instanceDt" th:text="${instance.instanceStartDt}"/>
