--- a/src/main/resources/public/src/scss/theme/default/_gnb.scss
+++ b/src/main/resources/public/src/scss/theme/default/_gnb.scss
@@ -222,10 +222,6 @@
             color: $menu-color;
             font-weight: 400;
 
-            &:hover {
-                background: $menu-bg-color;
-            }
-
             & > a {
                 display: block;
                 cursor: pointer;
@@ -240,6 +236,7 @@
                     color: $menu-color;
                 }
                 &.active {
+                    background-color: $menu-bg-hover;
                     span {
                         color: $white;
                     }
