--- a/src/main/resources/public/src/scss/process/_variables.scss
+++ b/src/main/resources/public/src/scss/process/_variables.scss
@@ -31,3 +31,6 @@ $color-picker-palette-padding:                0.9375rem 0 0.9375rem 0.9375rem; /
 $color-picker-colorchip-size:                 1rem; // 16px
 $color-picker-colorchip-margin:               0.1875rem; // 3px
 $color-picker-colorchip-border:               0.125rem solid $white; // 2px
+
+// thumbnail
+$thumbnail-container-padding:                 1.25rem; // 20px
