--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -122,6 +122,18 @@ input, button, select, optgroup, textarea {
   vertical-align: text-top;
 }
 
+.float-clear {
+  clear: both;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
 /* _flex.scss
  *
  * 파일 경로 : template/_flex.scss
@@ -898,6 +910,7 @@ table tr {
 }
 
 table tr th {
+  font-size: 1.125rem;
   font-weight: 500;
 }
 
@@ -2033,10 +2046,12 @@ button.ghost-line:disabled .icon {
   background-color: #0098FF;
   color: #ffffff;
   font-weight: 500;
-  display: flex;
   position: fixed;
-  width: 100vw;
+  top: 0;
+  left: 0;
+  right: 0;
   height: 3.125rem;
+  display: flex;
   align-items: center;
 }
 
@@ -2977,4 +2992,300 @@ button.ghost-line:disabled .icon {
   height: 0.938rem;
   color: #586872;
   margin: 0;
+}
+
+/* _thumbnail.scss 
+ *
+ * 파일 경로 : template/_thumbnail.scss
+ * @description 썸네일 디자인
+ * @author jy.lim
+ * @version 1.0
+ */
+body.thumbnail-modal-active {
+  overflow: hidden !important;
+}
+
+.thumbnail-modal-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: none;
+  overflow: auto;
+  z-index: 1;
+}
+
+.thumbnail-modal-wrapper.thumbnail-modal-active {
+  display: block;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2001;
+  background: rgba(116, 147, 179, 0.5);
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog {
+  z-index: 2001;
+  position: absolute;
+  top: 4em;
+  left: 0;
+  right: 0;
+  width: 77.5rem;
+  margin: 0 auto 2em auto;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  box-shadow: 0 0 0.3125rem 0.3125rem rgba(116, 147, 179, 0.25);
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out {
+  position: absolute;
+  right: 0.5em;
+  top: 0.5em;
+  width: 2rem;
+  height: 2rem;
+  opacity: 0.5;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:hover,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:hover {
+  opacity: 1;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:before,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:after,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:before,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:after {
+  position: absolute;
+  left: 0.9375rem;
+  content: ' ';
+  height: 2.0625rem;
+  width: 0.125rem;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:before,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:after {
+  background-color: #333333;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:before,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:after {
+  background-color: #CCCCCC;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:before,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:before,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-in:after,
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-close-out:after {
+  transform: rotate(45deg);
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-title {
+  height: 3.375rem;
+  color: #3F4B56;
+  font-size: 1rem;
+  font-weight: 500;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-bottom: solid 0.0625rem #EBEBEB;
+  padding: 1.125rem 0 0 1.25rem;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-body {
+  overflow: auto;
+  height: 40rem;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  border-bottom: solid 0.0625rem #EBEBEB;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons {
+  height: 5rem;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  text-align: right;
+  padding: 1.25rem 1.25rem 1.25rem 0;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button {
+  padding: 0.6em 1em;
+  margin-right: 0.3125rem;
+  color: #3F4B56;
+  text-transform: uppercase;
+  cursor: pointer;
+  display: inline-block;
+  border: solid 0.0625rem #EBEBEB;
+  border-radius: 0.0625rem;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button:last-child {
+  margin-right: 0;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-default {
+  background-color: #ffffff;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-red {
+  background-color: #e51c23;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-blue {
+  background-color: #007aff;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-green {
+  background-color: #00ca3c;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog .thumbnail-modal-buttons .thumbnail-modal-button-gray {
+  background-color: #969696;
+}
+
+.thumbnail-container {
+  font-family: "Noto Sans KR";
+  overflow-y: auto;
+  height: 100%;
+  padding: 1.25rem;
+}
+
+.thumbnail-container .thumbnail {
+  display: inline-block;
+  width: 14.06rem;
+  height: 18.13rem;
+  margin: 0.4375rem;
+  padding: 0;
+  box-shadow: 0 0 0.0625rem 0.0625rem #EBEBEB;
+  background-color: #ffffff;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.thumbnail-container .thumbnail.selected, .thumbnail-container .thumbnail:hover {
+  border-color: transparent;
+  box-shadow: 0 0 0 0.125rem #0098FF;
+  background-color: rgba(0, 152, 255, 0.05);
+}
+
+.thumbnail-container .thumbnail div.thumbnail-img {
+  display: inline-block;
+  width: 100%;
+  height: 9.063rem;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.thumbnail-container .thumbnail div.thumbnail-info {
+  height: 6.563rem;
+  padding: 0.8125rem 0.9375rem;
+}
+
+.thumbnail-container .thumbnail div.thumbnail-info p.thumbnail-info-text {
+  height: 1.375rem;
+  line-height: 1.375rem;
+}
+
+.thumbnail-container .thumbnail div.thumbnail-info p.thumbnail-info-text label {
+  display: block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #ACB4BF;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
+.thumbnail-container .thumbnail div.thumbnail-info p.thumbnail-info-text:first-child label {
+  color: #586872;
+  cursor: pointer;
+}
+
+.thumbnail-container .thumbnail div.thumbnail-info p.thumbnail-info-text:first-child .fileName {
+  display: none;
+  color: #586872;
+  width: 12.19rem;
+  height: 1.875rem;
+  float: left;
+}
+
+.thumbnail-container .thumbnail div.thumbnail-bottom {
+  height: 2.5rem;
+  line-height: 2.5rem;
+  border-top: solid 0.0625rem #EBEBEB;
+}
+
+.thumbnail-container .thumbnail div.thumbnail-bottom label {
+  width: 1.25rem;
+  color: #ACB4BF;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-left: 0.9375rem;
+}
+
+.thumbnail-container .thumbnail div.thumbnail-bottom img {
+  width: 0.9375rem;
+  height: 0.9375rem;
+  content: url("../media/icons/icon_delete.svg");
+  cursor: pointer;
+}
+
+.thumbnail-container .thumbnail-upload {
+  display: inline-block;
+  width: 14.06rem;
+  height: 18.13rem;
+  margin: 0.125rem;
+  padding: 5.625rem 0 0 0;
+  border: 0.0625rem dashed #EBEBEB;
+  box-shadow: 0 0 0.3125rem 0 #EBEBEB;
+  background-color: #F7F8F9;
+  text-align: center;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.thumbnail-container .thumbnail-upload:hover {
+  border-color: transparent;
+  box-shadow: 0 0 0 0.125rem #0098FF;
+  background-color: rgba(0, 152, 255, 0.05);
+}
+
+.thumbnail-container .thumbnail-upload .fileInput {
+  display: none;
+}
+
+.thumbnail-container .thumbnail-upload img {
+  content: url("../media/icons/thumbnail/icon_image.png");
+}
+
+.thumbnail-container .thumbnail-upload p.thumbnail-upload-text {
+  color: #ACB4BF;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-top: 1.25rem;
+}
+
+.thumbnail-container .thumbnail-nodata {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  color: #ACB4BF;
+  font-weight: 700;
+  font-size: 1.875rem;
+}
+
+.thumbnail-modal-wrapper {
+  display: block;
+}
+
+.thumbnail-modal-wrapper .thumbnail-modal-dialog {
+  top: 0 !important;
+  margin: 0 !important;
 }
